--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,28 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
+			<!-- Spring Boot Starter Web para suporte ao Spring MVC -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>3.1.4</version>
+			</dependency>
+
+			<!-- Swagger 2 para documentação de API -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>3.0.0</version>
+			</dependency>
+
+			<!-- Swagger UI para uma interface de usuário interativa -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>3.0.0</version>
+			</dependency>
+
 	</dependencies>
 
 
