--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.password=admin
 
 spring.jpa.defer-datasource-initialization=true
 
+youtube.api.key=sua_chave_de_api
+
 # validade do token
 jwt.validity=3600000
 
