--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.20.26</version>
+		</dependency>
 
 	</dependencies>
 
