--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 			<version>v3-rev222-1.25.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -152,7 +158,6 @@
 
 
 	</dependencies>
-
 
 	<build>
 		<plugins>
