--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.datasource.password=admin
 spring.jpa.defer-datasource-initialization=true
 
 aws.region=us-east-1
+aws.s3.buckets.customer=fs-editmatch-custumer-test
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
 youtube.api.key=sua_chave_de_api
 
