UPDATE - LOGICA DO PIX FUNCIONAL

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,8 @@ HELP.md
 
 ### dotEnv ###
 .env
-
+#.p12
+homologacao-559243-Plataforma de Freelancers.p12
 
 ### NetBeans ###
 /nbproject/private/
