UPDATE - LOGICA DO PIX produção e portfolio/order corrigidos

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ HELP.md
 .env
 #.p12
 homologacao-559243-Plataforma de Freelancers.p12
+producao-559243-editmatch.p12
 
 ### NetBeans ###
 /nbproject/private/
